--- a/app/src/App.css
+++ b/app/src/App.css
@@ -40,3 +40,16 @@
 .read-the-docs {
   color: #888;
 }
+
+.title {
+  border: none;
+  border-bottom: medium solid rgb(214, 214, 214);
+  font-size: 1em;
+  color:#1f1f1f;
+  line-height: 1.1;
+  font-weight: bold;
+  width:50%;
+}
+.title:hover{
+  background-color:whitesmoke;
+}
